Fix z-index of icon class in style.css

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ details{
     border-radius: 50%;
     position: relative;
     float: left;
-    z-index: -1;
+    z-index: 1;
 }
 a{
     text-decoration: none; 
@@ -81,5 +81,6 @@ a{
         display: flex;
     }
 } 
+
 
 
